Remove image source from frame element

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
 <div id="camera-container">
     <video id="video" autoplay playsinline></video>
-    <img id="frame" src="moldura.png">
+    <<img id="frame" src="">
+
 
     <div class="btn-area">
         <button class="btn" id="capture-btn">📸</button>
