--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
         background: #000;
     }
 
-    video {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transform: scaleX(-1);
+   video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: scaleX(-1);
+    z-index: 1; /* vídeo fica atrás */
+}
+
     }
 
     /* Moldura por cima */
