Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 
 <div id="camera-container">
     <video id="video" autoplay playsinline></video>
-    <<img id="frame" src="">
+    <img id="frame" src="moldura.png">
+
 
 
     <div class="btn-area">
