--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moldura da Festa</title>
+
     <style>
         body {
             margin: 0;
@@ -15,13 +16,18 @@
             height: 100vh;
         }
 
-        #camera {
+        #camera, #preview {
             position: absolute;
             width: 100vw;
             height: 100vh;
             object-fit: cover;
-            z-index: 1;
-            transform: scaleX(-1); /* ESPELHO */
+            top: 0;
+            left: 0;
+        }
+
+        #preview {
+            display: none;
+            z-index: 3;
         }
 
         #frame {
@@ -34,7 +40,7 @@
 
         .btn {
             position: absolute;
-            z-index: 3;
+            z-index: 4;
             font-size: 17px;
             padding: 12px 18px;
             border: none;
@@ -51,31 +57,58 @@
         #switchBtn {
             bottom: 80px;
         }
+
+        /* Botões da prévia */
+        #saveBtn, #retakeBtn {
+            bottom: 20px;
+            display: none;
+        }
+
+        #saveBtn {
+            left: 20px;
+            background: #4caf50;
+        }
+
+        #retakeBtn {
+            right: 20px;
+            background: #e91e63;
+        }
     </style>
 </head>
+
 <body>
 
     <video id="camera" autoplay playsinline></video>
     <img id="frame" src="moldura.png">
 
+    <img id="preview">
+
     <button class="btn" id="captureBtn">📸 Capturar</button>
     <button class="btn" id="switchBtn">🔄 Virar Câmera</button>
 
-    <canvas id="canvas" style="display:none"></canvas>
+    <button class="btn" id="saveBtn">💾 Salvar na Galeria</button>
+    <button class="btn" id="retakeBtn">🔄 Tirar Outra Foto</button>
+
+    <canvas id="canvas" style="display:none;"></canvas>
 
     <script>
         const camera = document.getElementById('camera');
         const frame = document.getElementById('frame');
         const canvas = document.getElementById('canvas');
+
+        const preview = document.getElementById('preview');
         const captureBtn = document.getElementById('captureBtn');
         const switchBtn = document.getElementById('switchBtn');
+
+        const saveBtn = document.getElementById('saveBtn');
+        const retakeBtn = document.getElementById('retakeBtn');
 
         let usingFrontCamera = false;
         let currentStream;
 
         async function startCamera() {
             if (currentStream) {
-                currentStream.getTracks().forEach(track => track.stop());
+                currentStream.getTracks().forEach(t => t.stop());
             }
 
             currentStream = await navigator.mediaDevices.getUserMedia({
@@ -88,42 +121,63 @@
 
             camera.srcObject = currentStream;
 
-            // ESPELHO apenas quando frontal estiver ativa
             camera.style.transform = usingFrontCamera ? "scaleX(-1)" : "scaleX(1)";
         }
 
-        // Inicia na câmera traseira
         startCamera();
 
-        // Trocar câmera
         switchBtn.onclick = () => {
             usingFrontCamera = !usingFrontCamera;
             startCamera();
         };
 
-        // Capturar foto em 1080x1920 com qualidade máxima
-        captureBtn.onclick = async () => {
-            const context = canvas.getContext('2d');
+        let finalImageURL = "";
 
-            // Define resolução vertical 1080x1920
+        captureBtn.onclick = async () => {
+            const ctx = canvas.getContext('2d');
+
             canvas.width = 1080;
             canvas.height = 1920;
 
-            // Ajuste para crop correto
-            context.drawImage(camera, 0, 0, canvas.width, canvas.height);
+            ctx.drawImage(camera, 0, 0, canvas.width, canvas.height);
 
-            // Desenha moldura por cima
-            const frameImg = new Image();
-            frameImg.src = "moldura.png";
-            await frameImg.decode();
+            const moldura = new Image();
+            moldura.src = "moldura.png";
+            await moldura.decode();
+            ctx.drawImage(moldura, 0, 0, canvas.width, canvas.height);
 
-            context.drawImage(frameImg, 0, 0, canvas.width, canvas.height);
+            finalImageURL = canvas.toDataURL("image/png", 1.0);
 
-            // Download em qualidade máxima
+            preview.src = finalImageURL;
+
+            preview.style.display = "block";
+            camera.style.display = "none";
+            frame.style.display = "none";
+
+            captureBtn.style.display = "none";
+            switchBtn.style.display = "none";
+
+            saveBtn.style.display = "block";
+            retakeBtn.style.display = "block";
+        };
+
+        saveBtn.onclick = () => {
             const link = document.createElement('a');
-            link.download = 'foto-moldura.png';
-            link.href = canvas.toDataURL("image/png", 1.0);
+            link.download = "foto-moldura.png";
+            link.href = finalImageURL;
             link.click();
+        };
+
+        retakeBtn.onclick = () => {
+            preview.style.display = "none";
+            camera.style.display = "block";
+            frame.style.display = "block";
+
+            saveBtn.style.display = "none";
+            retakeBtn.style.display = "none";
+
+            captureBtn.style.display = "block";
+            switchBtn.style.display = "block";
         };
     </script>
 
