--- a/index.html
+++ b/index.html
@@ -80,11 +80,23 @@
     100% { box-shadow: 0 0 0 0 rgba(255,255,255,0); }
 }
 
-/* Botão de trocar câmera — menor e discreto */
+/* Botão de trocar câmera — redondo e minimalista */
 #switchBtn {
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    padding: 0;
+    border: 2px solid rgba(255,255,255,0.7);
+    background: rgba(0, 0, 0, 0.35);
+    backdrop-filter: blur(6px);
     bottom: 115px;
     right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px; /* Ícone maior */
 }
+
 
 /* Botões da prévia */
 #saveBtn, #retakeBtn {
